--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -685,20 +685,8 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-\[15vh\] {
-  margin-top: 15vh;
-}
-
 .mt-\[10vh\] {
   margin-top: 10vh;
-}
-
-.mt-\[12vh\] {
-  margin-top: 12vh;
-}
-
-.mt-\[14vh\] {
-  margin-top: 14vh;
 }
 
 .block {
@@ -715,6 +703,10 @@ video {
 
 .inline-flex {
   display: inline-flex;
+}
+
+.\!grid {
+  display: grid !important;
 }
 
 .grid {
@@ -757,12 +749,12 @@ video {
   width: 100%;
 }
 
-.max-w-xs {
-  max-width: 20rem;
-}
-
 .max-w-full {
   max-width: 100%;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .flex-1 {
@@ -975,16 +967,8 @@ video {
   padding-top: 0.5rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-48 {
-  padding-top: 12rem;
 }
 
 .text-center {
@@ -1124,18 +1108,27 @@ video {
 
 /* Base styles */
 
-html,
+html {
+  scrollbar-gutter: stable both-edges;
+  height: 100%;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  html.modal-open {
+    scrollbar-gutter: auto;
+    overflow: hidden;
+    padding-inline: 11px;
+  }
+}
+
 body {
-  /* height: 100%; */
   margin: 0;
   padding: 0;
-  /* font-size: 100%; */
   font-family: 'Roboto', sans-serif;
   background-color: rgb(243, 244, 241);
-  z-index: 3;
-  scrollbar-gutter: stable both-edges;
-  color: rgba(23, 23, 23);
+  color: rgb(23, 23, 23);
   transition: background-color 0.5s ease;
+  min-height: 100%;
 }
 
 .boid-active {
@@ -1300,22 +1293,19 @@ nav ul li a:hover,
 .modal {
   display: none;
   position: fixed;
-  z-index: 9999;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  z-index: 1000;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.9);
+  align-items: center;
+  justify-content: center;
 }
 
 .modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 #caption {
@@ -1428,16 +1418,18 @@ html {
 .easter-egg {
   position: fixed;
   bottom: -21px;
-  /* Position it so that only the top half is visible initially */
   right: 25px;
   width: 45px;
   height: 40px;
-  /* Full height of the image */
   background-image: url('../images/home.png');
   background-size: 45px 40px;
   background-position: center;
-  z-index: 1;
+  z-index: 2000;
   cursor: pointer;
+}
+
+html.modal-open .easter-egg {
+  right: 36px;
 }
 
 /* Mastering */
@@ -1622,24 +1614,8 @@ html {
     display: none;
   }
 
-  .nav-hide\:h-auto {
-    height: auto;
-  }
-
-  .nav-hide\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .nav-hide\:w-2\/3 {
-    width: 66.666667%;
-  }
-
   .nav-hide\:w-\[48px\] {
     width: 48px;
-  }
-
-  .nav-hide\:flex-row {
-    flex-direction: row;
   }
 }
 
@@ -1658,12 +1634,12 @@ html {
     margin-bottom: 2rem;
   }
 
-  .md\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
+  }
+
+  .md\:mt-8 {
+    margin-top: 2rem;
   }
 
   .md\:block {
@@ -1727,10 +1703,6 @@ html {
 
   .md\:pb-9 {
     padding-bottom: 2.25rem;
-  }
-
-  .md\:pt-0 {
-    padding-top: 0px;
   }
 
   .md\:pt-12 {
